# ephysiopy

./: .coverage  .gitignore  .gitignore.swp  .readthedocs.yaml  404.html  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  conf.py  docs-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.py  zensical.toml
axona_headers/: egf_header.pkl  set_header.pkl  tetrode_header.pkl
dacq2py/: OptoCluster.py  axonaIO.py  cluster.py  dacq2py_util.py  dacq_comment_finder.py  eegcalcs.py  fieldcalcs.py  gridcell.py  homography.py  lineartrack.py  mle_von_mises_vals.txt  phaseprecession.py  pos_header.pkl  smoothdata.py  spikecalcs.py  statscalcs.py  t_win_SAC.py  utils.py  waveletFunctions.py
docs/: Introduction.rst  Makefile  README.md  Usage.rst  conf.py  ephysiopy.common.rst  ephysiopy.dacq2py.rst  ephysiopy.ephys_generic.rst  ephysiopy.format_converters.rst  ephysiopy.openephys2py.rst  ephysiopy.rst  ephysiopy.tests.rst  ephysiopy.visualise.rst  ephysiopy_tutorial.md  field_analysis.md  how_to.rst  index.md  index.rst  index1.md  installation.md  io.md  lfp.md  make.bat  misc_stats.md  oe_settings.md  phase_precession.md  plotting.md  position.md  quickstart.md  rationale.rst  reference.md  requirements.txt  spike_train_analysis.md  usage.md  utils.md  waveform_analysis.md  what_is_ephysiopy.md
ephys_generic/: binning.py  ephys_generic.py  gridcell.py  phaseprecession.py  statscalcs.py  utils.py
ephysiopy/: __about__.py  __init__.py
ephysiopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
explanation/: index.html
format_converters/: OE_Axona.py  OE_numpy.py
how-to-guides/: index.html
openephys2py/: OEKiloPhy.py  OESettings.py
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  search.json  (+1 more)
(+312 files in other folders)
