[project]
name = "ephysiopy"
version = "2.0.66"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "boost-histogram>=1.6.1",
    "h5py>=3.15.1",
    "mahotas>=1.4.18",
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "numpy>=2.4.1",
    "numpydoc>=1.10.0",
    "pactools>=0.3.1",
    "phylib>=2.7.0",
    "pycircstat2>=0.1.15",
    "pycwt>=0.5.0b0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=9.0.2",
    "pytest-mpl>=0.18.0",
    "pywavelets>=1.9.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.7.0",
    "sphinx-autodoc-typehints>=3.6.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-prompt>=1.10.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
